Saner selector for comment input, fixed extra space getting added between textarea and 'push enter to submit' label

--- a/totter/static/style.css
+++ b/totter/static/style.css
@@ -522,8 +522,7 @@ ul.project_idea_comments li img {
     font-size: 12px;
     word-wrap: break-word;
 }
-textarea.comment_text {
-    font-size: 12px;
+.comment_input {
     height: 15px;
     left: 14px;
     margin: 0;
